--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hammerjs": "^2.0.8",
     "jsartoolkit": "^0.0.0",
     "rxjs": "^5.4.2",
+    "threex": "^1.0.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
